Publishing Site Words Typing but still needs work.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
             <p><a href="reading/alphabetrace/"><img src="images/alphabetrace.png" alt="Image of Alphabet Race" title="" /></a></p>
 
+            <h2><a href="reading/sightwordstyping/">Sight Words Typing Game</a></h2>
+
+            <p>Combining the Alphabet Race Typing game with the Sight Words Memory Game.</p>
+
+            <p><a href="reading/sightwordstyping/"><img src="images/sightwordstyping.png" alt="Image of Sight Word Typing" title="" /></a></p>
+
             <h2><a href="reading/alphabeticalordersort/">Alphabetical Order Sort</a></h2>
 
             <p>Sort the word family into alphabetical order by dragging-and-dropping the words into the right places.</p>
