Style tweeks. Added bounching first charater to Sight Words Typing.

--- a/reading/sightwordsmemory/index.html
+++ b/reading/sightwordsmemory/index.html
@@ -45,7 +45,7 @@
       outline: solid;
       /*width: 150px;
       height: 150px;*/
-      width: 20%;
+      min-width: 20%;
       height: 20%;
       line-height: 100%;
       text-align: center;
@@ -65,6 +65,10 @@
     .lilarger {
       width: 13%;
       height: 13%;      
+    }
+
+    .lilarge span, .lilarger span {
+      top: 40%;
     }
 
     span { 
