--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
 
             <p><a href="math/coordinates/"><img src="images/coordinates.png" alt="Image of Coordinate Finder" title="" /></a></p>
 
+            <h2><a href="math/primefactortree/">Prime Factor Tree Generator</a></h2>
+
+            <p>Slightly tweeked from original code by <a href="https://github.com/collectivecognition/primeFactorTree">William Blanchette</a>. Takes any number and breaks it down into a tree of its prime factors.</p>
+
+            <p><a href="math/primefactortree/"><img src="images/primefactortree.png" alt="Image of Prime Factor Tree" title="" /></a></p>
+
             <h2><a href="math/fractalexplorer/">Fractal Explorer</a></h2>
 
             <p>For exploring binary trees, dragon curves, Mandelbrot, and Julia sets.</p>
