Minor text-edit.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <h2><a href="reading/typingquest/">Typing Quest</a></h2>
 
-            <p>A really fun and mind-bending typing game. I have cleaned up the language from the original and refactored the code a bit to support different skill levels with options easy enough a toddler can hunt-and-peck to play.</p>
+            <p>A really fun and mind-bending typing game. I have cleaned up the off-color language from the original and refactored the code a bit to support different skill levels with options easy enough a toddler can hunt-and-peck to play.</p>
 
             <p>Credit to <a href="http://milosz.ca">Miłosz Kośmider</a> with input from <a href="http://abielinski.com">Adam Bielinski</a>.</p>
 
