--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
 
             <h2><a href="reading/creativecommonsbookreader/">Creative Commons Book Reader</a></h2>
 
+            <p>Interface for reading books to children. Allows stepping through by page, sentence, and word. Also allows for click-highlighting words to read them aloud.</p>
+
             <p>Creative Commons books by <a href="http://brotherswhim.com/">Brothers Whim</a> and <a href="http://prathambooks.org/">Pratham Books</a> (<a href="https://www.scribd.com/collections/2300329/Creative-Commons-Originals">Pratham Scribd</a>).</p>
 
             <p><a href="reading/creativecommonsbookreader/"><img src="images/creativecommonsbookreader.png" alt="Image of Creative Commons Book Reader" title="" /></a></p>        
@@ -194,6 +196,14 @@
             <p>Slightly tweeked from original code by <a href="https://github.com/collectivecognition/primeFactorTree">William Blanchette</a>. Takes any number and breaks it down into a tree of its prime factors.</p>
 
             <p><a href="math/primefactortree/"><img src="images/primefactortree.png" alt="Image of Prime Factor Tree" title="" /></a></p>
+
+            <h2><a href="math/puzzlearithmetic/">Puzzle-Piece Arithmetic</a></h2>
+
+            <p>My youngest loves puzzles, so this interface for adding numbers really engages him.</p>
+
+            <p>Credit to <a href="https://codepen.io/ProfessorSamoff/pen/ByJoaE">Tim Samoff</a> for the CSS to make the puzzle-pieces and <a href="https://boardgamegeek.com/boardgame/20393/thomas-tank-engine-thomas-numbers-game">Thomas and Friends Number Game</a> board game for the concept.</p>
+
+            <p><a href="math/puzzlearithmetic/"><img src="images/puzzlearithmetic.png" alt="Image of Puzzle-Piece Arithmetic" title="" /></a></p>
 
             <h2><a href="math/fractalexplorer/">Fractal Explorer</a></h2>
 
