--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 
             <p><a href="science/daysoftheweek/"><img src="images/daysoftheweek.png" alt="Image of Days of the Week Carousel" title="" /></a></p>
 
+            <h1>Games</h1>
+
+            <h2><a href="games/gotcha/">Gotcha!</a></h2>
+
+            <p>Find the AI before it finds you by balancing evasion, reconnaissance, and attacking. Based on the game <em>Gotcha!</em> described in the book <a href="http://www.kcl.ac.uk/sspp/departments/warstudies/people/professors/sabin/simwar.aspx"><em>Simulating War</em></a> by Philip Sabin. Credit to <a href="https://github.com/web-tiki/responsive-grid-of-hexagons">web-tiki</a> for the hexagons CSS.</p>
+
+            <p><a href="games/gotcha/"><img src="images/gotcha.png" alt="Image of Gotcha!" title="" /></a></p>
+
         </div>
 
         <div style="float:right;width:45%">
