--- a/index.html
+++ b/index.html
@@ -163,9 +163,15 @@
 
             <p><a href="math/numberline/"><img src="images/numberline.png" alt="Image of Number Line" title="" /></a></p>
 
+            <h2><a href="math/patternblocks/">Pattern Blocks</a></h2>
+
+            <p>A javascript version of pattern blocks built with Fabric JS.</p>
+
+            <p><a href="math/patternblocks/"><img src="images/patternblocks.png" alt="Image of Pattern Blocks" title="" /></a></p>
+
             <h2><a href="math/shapehuntcardinality/">Shape Hunt Cardinality Game</a></h2>
 
-            <p>Has children look for both the correct shape and number of shapes. Used to work on n-back skills.
+            <p>Has children look for both the correct shape and number of shapes. Used to work on n-back skills.</p>
 
             <p><a href="math/shapehuntcardinality/"><img src="images/shapehuntcardinality.png" alt="Image of Shape Hunt Cardinality Game" title="" /></a></p>
 
